<resources>
    <string name="app_name">My Omoshiroi</string>
    <string name="LoginHere">Already have an account? <u><b>Log in Here</b></u></string>
    <string name="SignUp">New to OMOSHIROI? <u><b>Register Here</b></u></string>
    <string name="forgot_password"><u><b>Forgot Password</b></u></string>
    <string name="pop_up_settings">Settings</string>
    <string name="my_omoshiroi">My OMOSHIROI</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Name</string>
    <string name="lrn">LRN/Student #</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="spacing">spacing</string>
    <string name="reset_password">Reset Password?</string>
    <string name="Message_for_reset">Enter your email to received reset link</string>
    <string name="send">Send</string>
    <string name="user_profile">User Profile</string>
    <string name="level">Level:</string>
    <string name="points">XP:</string>
    <string name="ocoins">Ocoins:</string>
    <string name="setting">Setting</string>
    <string name="exit_game">Exit Game</string>
    <string name="help_faq">Help/FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="sound">Sound Effect</string>
    <string name="music">Background Music</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="over"> / 5</string>
    <string name="play_again">Play Again</string>
    <string name="close">Close</string>
    <string name="loading">Loading</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="about">About Us</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="multiple_mode">Multiple Choice Mode</string>
    <string name="contact_us"><u><b>Contact Us</b></u></string>
    <string name="tenses_stage_01">Tenses Mode Stage 01</string>
    <string name="tenses_stage_02">Tenses Mode Stage 02</string>
    <string name="multiple_stage_01">Multiple Choice Mode Stage 01</string>
    <string name="multiple_stage_02">Multiple Choice Mode Stage 02</string>
    <string name="multiple_stage_03">Multiple Choice Mode Stage 03</string>
    <string name="torf_stage_01">True or False Mode Stage 01</string>
    <string name="matching_stage_01">Matching Mode Stage 01</string>
    <string name="spelling_stage_01">Spelling Mode Stage 01</string>
</resources>