<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    tools:context=".MainActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/Linear_upper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:contentDescription="@string/my_omoshiroi"
                    app:srcCompat="@raw/banner_omoshiroi" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColorHint="#004455"
                    android:fontFamily="@font/roboto_medium"
                    app:endIconMode="clear_text"
                    app:endIconTint="#004455"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="#004455"
                    app:hintTextColor="#004455"
                    app:boxStrokeColor="#004455">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/email"
                        android:inputType="textWebEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColorHint="#004455"
                    android:fontFamily="@font/roboto_medium"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="#004455"
                    app:hintTextColor="#004455"
                    app:boxStrokeColor="#004455"
                    app:passwordToggleTint="#004455">

                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/roboto_medium"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lineSpacingExtra="16sp"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingTop="8dp"
                    android:text="@string/forgot_password"
                    android:textColor="#004455"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded1"
                    android:fontFamily="@font/bauhaus_regular"
                    android:textStyle="bold"
                    android:text="Log In"
                    android:textColor="@color/white_smoke"
                    android:textSize="20sp"
                    app:backgroundTint="#004455" />

                <TextView
                    android:id="@+id/text_view_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/SignUp"
                    android:textAlignment="center"
                    android:textColor="#004455"
                    android:textSize="18sp" />

            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:id="@+id/linearLoadingProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/register_Progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/loading"
                android:fontFamily="@font/roboto_medium"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="Check your internet connection if you're stuck here."
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>