<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity"
    android:background="@drawable/gradient_drawable"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/backButton"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:background="@drawable/ic_back"
                app:backgroundTint="#000000" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/pop_up_settings"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textmusic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:text="@string/music"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchMusic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="#000000"
                        android:button="@drawable/music_on"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textsound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:text="@string/sound"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchSound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="#000000"
                        android:button="@drawable/sound_on"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/btn_feedback"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:backgroundTint="#000000"
                            android:background="@drawable/feedback" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feedback"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <Button
                            android:id="@+id/btn_HelpFAQ"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:backgroundTint="#000000"
                            android:background="@drawable/help" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/help_faq"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/exitButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/rounded_btn"
                app:backgroundTint="@null"
                android:text="@string/exit_game"
                app:icon="@drawable/ic_exit" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>