<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_gravity="center">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/closeButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_close"
                app:backgroundTint="#000000" />
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                app:srcCompat="@raw/select_difficulty"
                android:layout_gravity="center_horizontal"
                android:contentDescription="Select Your Difficulty" />
            <Button
                android:id="@+id/btn_HelpTopicDifficulty"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:backgroundTint="#000000"
                android:gravity="center_horizontal"
                android:background="@drawable/ic_help_outline" />
        </LinearLayout>
            <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded2"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                app:srcCompat="@raw/easy"
                android:contentDescription="@string/easy" />
            <Button
                android:id="@+id/easyButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#00FFFFFF"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/easy"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                app:srcCompat="@raw/medium"
                android:contentDescription="@string/medium" />
            <Button
                android:id="@+id/mediumButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="#00FFFFFF"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/medium"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

<LinearLayout
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:background="@drawable/rounded_btn"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center"
        app:srcCompat="@raw/hard"
        android:contentDescription="@string/hard" />
    <Button
        android:id="@+id/hardButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hard"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"/>
</LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>